--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color:black;
+    padding:30px;
+    color:white;
+    /* background-image: */
 }
 
 
 #nft-grid {
+    
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 0px;
-    padding: 10px;
+    gap: 30px;
+    padding: 0px;
     justify-content: center; /* Center items horizontally */
     align-items: center; /* Center items vertically */
     justify-items: center; /* Center content within the items */
@@ -35,9 +40,10 @@ body {
     overflow: hidden;
     background-color: #fff;
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
-    min-height:350px;
-    max-height:350px;
+    min-height:250px;
+    max-height:250px;
     font-size:12px;
+    /* color:whiteš */
     /* max-width: calc(33.333% - 10px);  */
 }
 
