--- a/style.css
+++ b/style.css
@@ -2,9 +2,53 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color:black;
-    padding:30px;
-    color:white;
+    /* padding:30px; */
+    color:yellow;
     /* background-image: */
+}
+
+#search-input {
+    width: 520px;
+    height:50px;
+    padding: 20px;
+    padding-left:50px;
+    line-height: 26px;
+    padding: 20px;
+    font-size:30px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: transparent;
+    background-color: rgba(255, 255, 255, 0.578);
+    color: black;
+    backdrop-filter: blur(20px);
+    border-radius:50px;
+    border: solid 10px rgb(237, 210, 8);
+    transition: background-color 0.2s cubic-bezier(0.05, 0, 0.2, 1) 0s, border-color 0.2s cubic-bezier(0.05, 0, 0.2, 1) 0s;
+    max-width:70vw;
+    text-align: center;
+}
+
+
+.stageBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+    background:transparent;
+    width:100vw;
+    height:100vh;
+    justify-content: center;
+    position:absolute;
+}
+
+.stageCont {
+    width:auto;
+    height:auto;
+    background-color:transparent;
+    position:absolute;
+    z-index:999999999;
+    pointer-events:auto;
 }
 
 
